# machine-learning-zoomcamp-homework

./: .gitignore  README.md  pyproject.toml
01-intro/: 07-numpy.ipynb  09-pandas.ipynb  homework.ipynb
02-regression/: carprice.ipynb  homework.ipynb
03-classification/: churn_prediction_project.ipynb  homework.ipynb
04-evaluation/: class_notebook.ipynb  homework.ipynb
05-deployment/: Dockerfile  ping.py  predict-test.ipynb  predict-test.py  predict.py  predict_api.py  train-churn-model.ipynb  train.py
05-deployment/homework/homework-env/: lead-score.py  main.py  pyproject.toml
05-deployment/workshop/: Dockerfile  README.md  marketing.py  ping.py  predict.py  pyproject.toml  starter.ipynb  train.py  workshop-uv-fastapi.ipynb
06-trees/: homework.ipynb  notebook.ipynb
08-deep-learning/: homework.ipynb  notebook.ipynb
08-deep-learning/pytorch/: notebook.ipynb
09-serverless/: invoke.py
09-serverless/homework/: Dockerfile  ONNX_test.py  lambda_function.py  notebook.ipynb
09-serverless/keras/: .gitignore.save  Dockerfile  ONNX test.ipynb  lambda_function.py
09-serverless/pytorch/: Dockerfile  invoke.py  lambda_function.py  publish.sh  test.py
09-serverless/sklearn/: Dockerfile  lambda_function.py  publish.sh  pyproject.toml
09-serverless/sklearn/train/: pyproject.toml  train.py
10-kubernetes/: Dockerfile  app.py  pyproject.toml
