[project]
name = "machine-learning-zoomcamp-homework"
version = "0.1.0"
description = "venv for the machine learning zoomcamp coursework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.51",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "onnxruntime>=1.24.1",
    "pandas>=3.0.0",
    "pillow>=12.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tf2onnx",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "xgboost>=3.1.3",
]

[tool.uv.workspace]
members = [
    "09-serverless/sklearn/train",
]

[tool.uv.sources]
tf2onnx = { git = "https://github.com/onnx/tensorflow-onnx.git" }
[project]
name = "machine-learning-zoomcamp-homework"
version = "0.1.0"
description = "venv for the machine learning zoomcamp coursework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.51",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "xgboost>=3.1.3",
]

[tool.uv.workspace]
members = [
    "09-serverless/sklearn/train",
    "10-kubernetes",
]
