[project]
name = "10-kubernetes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.132.0",
    "keras-image-helper>=0.0.2",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
[tool.uv.workspace]
